[gd_scene load_steps=7 format=3 uid="uid://c5m12u5356hcl"]

[ext_resource type="Script" path="res://scenes/play/Level_Container/level5/puzzle.gd" id="1_ju6yd"]
[ext_resource type="Texture2D" uid="uid://ctmqhmx7qlxls" path="res://assets/home_page/Button_01.png" id="2_rxwef"]
[ext_resource type="Texture2D" uid="uid://8lnuql67ep3f" path="res://assets/unlock_full.png" id="3_0mpig"]
[ext_resource type="Script" path="res://CloseButton.gd" id="3_i6fh6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vtnnm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_crpci"]

[node name="puzzle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ju6yd")

[node name="TileGrid" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="CloseControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="CloseControl"]
modulate = Color(0.839216, 0.858824, 0.87451, 0.47451)
layout_mode = 0
offset_left = -109.0
offset_top = 33.0
offset_right = -6.0
offset_bottom = 110.0
texture = ExtResource("2_rxwef")

[node name="CloseButton" type="Button" parent="CloseControl"]
layout_mode = 0
offset_left = -107.0
offset_top = 34.0
offset_right = -10.0
offset_bottom = 105.0
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vtnnm")
theme_override_styles/focus = SubResource("StyleBoxEmpty_crpci")
text = "Quit"
script = ExtResource("3_i6fh6")

[node name="UnlockImage" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0mpig")

[node name="ResultLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -74.0
offset_right = -2.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
